--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
             Dimas
         </h1>
     </header>
+    <header>
+        <h1>
+            Rizki
+        </h1>
+    </header>
 </body>
 </html>
