--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
             Rizki
         </h1>
     </header>
+    <header>
+        <h1>
+            Nugroho
+        </h1>
+    </header>
 </body>
 </html>
