--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
             IF D
         </h1>
     </header>
+    <header>
+        <h1>
+            Teknik
+        </h1>
+    </header>
 </body>
 </html>
