--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
             Teknik
         </h1>
     </header>
+    <header>
+        <h1>
+            Informatika
+        </h1>
+    </header>
 </body>
 </html>
