--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
             Informatika
         </h1>
     </header>
+    <header>
+        <h1>
+            Saya senang
+        </h1>
+    </header>
 </body>
 </html>
