--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
             Saya senang
         </h1>
     </header>
+    <header>
+        <h1>
+            Bermain
+        </h1>
+    </header>
 </body>
 </html>
