--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
             Bermain
         </h1>
     </header>
+    <header>
+        <h1>
+            Bola
+        </h1>
+    </header>
 </body>
 </html>
